--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,8 @@
+@import url(http://fonts.googleapis.com/earlyaccess/notosanstc.css);
+
   body {
-    font-family: Arial;
+    font-family: 'cwTeXKai', serif;
+    overflow-x: hidden;
   }
 
   h2 {
@@ -50,6 +53,11 @@
     width: calc(33.3333% - 2.5em);
     margin: 2.5em 0 0 2.5em;
   }
+
+  #title-bar:hover {
+    /*transform: scale(1.1);*/
+  }
+
 
   .flex-container {
   padding: 0;
@@ -197,7 +205,7 @@
   }
 
   body:not(.is-touch) .flex-container li:hover > .image { /*滑鼠滑過方塊放多大*/
-    transform: scale(1.1);
+    /*transform: scale(1.1);*/
   }
 
   body:not(.is-touch) .flex-container li:hover > .image:before {
@@ -245,24 +253,43 @@ body.is-touch .flex-container li .content {
   }
 
   .flex-item:hover {
-    transform: scale(1.1);
+    /*transform: scale(1.1);*/
     z-index: 3;
     opacity: 0.8;
   }
 
 
   .flex-nav {
-  background: burlywood;
-  padding: 2.5px;
-  margin: 5px;
-  width: 100%;
-  height: 200px;
-  margin-top: 5px;
-  line-height: 150px;
-  color: white;
-  font-weight: bold;
-  font-size: 3em;
-  text-align: center;
+    opacity: 0.8;
+    padding: 2.5px;
+    margin: 5px;
+    margin-top: 5px;
+    color: black;
+    font-weight: bold;
+    font-size: 3em;
+    text-align: center;
+    transition: transform 0.5s ease, opacity 0.5s ease;
+    flex: 100%;
+    height: 600px;
+    border: none;
+  }
+
+  .flex-large {
+    display: block;
+    width: 100%;
+    background: burlywood;
+    padding: 2.5px;
+    margin: 5px;
+    margin-top: 5px;
+    color: black;
+    font-weight: bold;
+    font-size: 3em;
+    text-align: center;
+    height: 400px;
+  }
+
+  #_0 {
+    display: none;
   }
 
   .content {
@@ -327,19 +354,82 @@ body.is-touch .flex-container li .content {
       width: 100%;
     }
 
+  /* image inside content */
 
 
 
-  @media screen and (min-width: 1006px) {
+  @media screen and (max-width: 1440px) {
     .flex-item {
       flex: 200px;
       line-height: 200px;
     }
-
     .flex-container li > a .content {
       line-height: 200px;
     }
 
+  }
 
+  @media screen and (max-width: 1090px) {
+    .flex-item {
+      flex: 180px;
+      line-height: 180px;
+    }
+    .flex-container li > a .content {
+      line-height: 180px;
+    }
+
+  }
+
+  @media screen and (max-width: 990px) {
+    .flex-item {
+      flex: 150px;
+      line-height: 150px;
+    }
+    .flex-container li > a .content {
+      line-height: 150px;
+    }
+
+  }
+
+  @media screen and (max-width: 850px) {
+    .flex-item {
+      flex: 130px;
+      line-height: 130px;
+    }
+    .flex-container li > a .content {
+      line-height: 130px;
+    }
+  }
+
+  @media screen and (max-width: 740px) {
+    .flex-item {
+      flex: 110px;
+      line-height: 110px;
+    }
+    .flex-container li > a .content {
+      line-height: 110px;
+    }
+
+  }
+
+  @media screen and (max-width: 640px) {
+    .flex-item {
+      flex: 90px;
+      line-height: 90px;
+    }
+    .flex-container li > a .content {
+      line-height: 90px;
+    }
+
+  }
+
+  @media screen and (max-width: 540px) {
+    .flex-item {
+      flex: 80px;
+      line-height: 80px;
+    }
+    .flex-container li > a .content {
+      line-height: 80px;
+    }
 
   }
