--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,8 +54,44 @@
     margin: 2.5em 0 0 2.5em;
   }
 
+  button {
+
+    border: none;
+    background: none;
+  }
+
   #title-bar:hover {
     /*transform: scale(1.1);*/
+  }
+
+  button > img {
+    width: 30%;
+    height: 30%;
+  }
+
+  .flex-container span > div {
+    display: inline-block;
+    position: absolute;
+  }
+
+  .flex-container > .three-buttons {
+    width: 300px;
+  }
+
+  .three-buttons {
+    display: inline-block;
+    position: absolute;
+    height: 100px;
+    width: 200px;
+    top: 50%;
+    index: 4;
+  }
+
+  .three-buttons img {
+    width: 30%;
+    height: auto;
+    float: left;
+    index: 5;
   }
 
 
@@ -73,7 +109,7 @@
   .flex-container div {
     transition: transform 0.5s ease, opacity 0.5s ease;
     position: relative;
-    width: calc(33.3333% - 2.5em);
+    /*width: calc(33.3333% - 2.5em);*/
     margin: 2.5em 0 0 2.5em;
   }
 
@@ -204,8 +240,8 @@
     margin-bottom: 0;
   }
 
-  body:not(.is-touch) .flex-container li:hover > .image { /*滑鼠滑過方塊放多大*/
-    /*transform: scale(1.1);*/
+  body:not(.is-touch) .flex-container li:hover > .move { /*滑鼠滑過方塊放多大*/
+    transform: scale(1.1);
   }
 
   body:not(.is-touch) .flex-container li:hover > .image:before {
@@ -355,7 +391,11 @@ body.is-touch .flex-container li .content {
     }
 
   /* image inside content */
-
+  .logos {
+    display: inline-block;
+    position: absolute;
+    margin: 0px;
+  }
 
 
   @media screen and (max-width: 1440px) {
@@ -430,6 +470,17 @@ body.is-touch .flex-container li .content {
     }
     .flex-container li > a .content {
       line-height: 80px;
+    }
+
+  }
+
+  @media screen and (max-width: 490px) {
+    .flex-item {
+      flex: 150px;
+      line-height: 150px;
+    }
+    .flex-container li > a .content {
+      line-height: 150px;
     }
 
   }
